@@ -3,6 +3,9 @@ Carlos Rueda - MMI / MBARI
 
 ChangeLog
 
+2003-03-27
+	- UriResolver: some doc updates and minor code re-arrangements (no changes in logic)
+	
 2003-03-21
 	- Just comment about Omv.acronym saying that is about "resourceType" not "shortName"
        
